# SLM

./: .gitattributes  .gitignore  README.md
EXACT/: README.md  pyproject.toml  requirements.txt
EXACT/exact/: __init__.py  causal_corr.py  cintas.py  evaluation.py  fig5.py  fig6.py  hardware.py  io.py  metrics.py  plotting.py  preprocessing.py  windowing.py
EXACT/exact/experiments/: __init__.py  ets2026.py
EXACT/notebooks/: EXACT_clean.ipynb  Fig5_benign_sparse_causal_network.ipynb
EXACT/scripts/: plot_fig5_benign_causal_network.py  run_exact_ets2026.py
EXACT/tests/: test_smoke_pipeline.py
FP_Units/: gen_power_area_comp.py
FP_Units/ITC24_SCOUT_results/: FP_Unit_Metrics.xlsx
FP_Units/RTL/: SA_128.v  adder16.v  adder32.v  adder_tb.v  mult16.v  mult32.v  mult_tb.v
FixedPointMaths/: 32_bit_adder.v  64bit_fixed_point_additon.v  fixed_point_mult.v
GENERAL_DELAY_AGE/: PULSE_ANALYSIS.sp  TIMING_DFF.sp  analyze_vt_delay.py  convert_csv_into_more_freindly_format.py
HW_TELEMETRY_DATA_COLLECTION/: README.md  SCOUT_DIAGNOSIS.py  autoencoderClass.py  collect_AE_AUC_data.py  collect_AE_MEMORY.py  collect_IF_AUC_data.py  collect_IF_mem_data.py  cross_compare_IF_AE_SCOUT.py  fi_rankings.py  init_AUC_results.txt  init_comp.py  isolationForestClass.py  parse_log_for_training.py  simpleL2Class.py  telem_feature_helper.py
HW_TELEMETRY_DATA_COLLECTION/OCTANE/: FCResNet.py  (+6 more)
QIF_IMG/: voltage_temp_image.py
TSV_AGE/: PULSE_ANALYSIS.sp  TSV_2x1_RO_3.sp  TSV_2x2_RO_3.sp  TSV_3x1_RO_3.sp  TSV_3x2_RO_3.sp  TSV_3x3_RO_3.sp  TSV_RO_3.sp
VOLTAGE_DROOP_AUTOMATION/: README.md
(+2356 files in other folders)
