[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exact-edge"
version = "0.1.0"
description = "EXACT: Edge-eXplainable Autonomous Causal Telemetry (notebook-derived ETS 2026 draft package)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "EXACT authors", email = "replace-me@example.com"},
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "matplotlib>=3.7",
  "networkx>=3.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
]

[tool.setuptools.packages.find]
include = ["exact*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
